[UPD] add  'else' a JSNACK5

--- a/JSNACK5/index.html
+++ b/JSNACK5/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Array vuoto</title>
+    <title>snack5</title>
 </head>
 <body>
     <script type="text/javascript" src="/JSNACK5/main.js"></script>
